feat(ok_and_update): implemented light game state